src/mongo/db/catalog/coll_mod.cpp
@@ -43,6 +43,7 @@
 #include "mongo/db/catalog/database.h"
 #include "mongo/db/catalog/index_catalog.h"
 #include "mongo/db/client.h"
+#include "mongo/db/commands/feature_compatibility_version_command_parser.h"
 #include "mongo/db/db_raii.h"
 #include "mongo/db/index/index_descriptor.h"
 #include "mongo/db/repl/replication_coordinator_global.h"
@@ -180,8 +181,19 @@ StatusWith<CollModRequest> parseCollModRequest(OperationContext* opCtx,
                 allowedFeatures |= MatchExpressionParser::kJSONSchema;
             }
             auto statusW = coll->parseValidator(e.Obj(), allowedFeatures);
-            if (!statusW.isOK())
-                return statusW.getStatus();
+            if (!statusW.isOK()) {
+                if (statusW.getStatus().code() == ErrorCodes::JSONSchemaNotAllowed) {
+                    // The default error message for disallowed $jsonSchema is not descriptive
+                    // enough, so we rewrite it here.
+                    return {ErrorCodes::JSONSchemaNotAllowed,
+                            str::stream() << "The featureCompatibilityVersion must be 3.6 to add a "
+                                             "$jsonSchema validator to a collection. See "
+                                          << feature_compatibility_version::kDochubLink
+                                          << "."};
+                } else {
+                    return statusW.getStatus();
+                }
+            }
 
             cmr.collValidator = e;
         } else if (fieldName == "validationLevel" && !isView) {
